force-app/main/default/objects/Opportunity/fields/Brand_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Brand_Account_ID__c</fullName>
    <description>This is the account ID of the related account in this opportunity and only shown if the Account is a brand (Account Type=Brand)</description>
    <formula>IF(
ISPICKVAL(Account.Type , &quot;Brand Direct&quot;),  Account.X18_Digit_Account_ID__c   ,&quot;&quot;)</formula>
    <inlineHelpText>This is the account ID of the related account in this opportunity and only shown if the Account is a brand (Account Type=Brand)</inlineHelpText>
    <label>Brand Account ID</label>
    <type>Text</type>
</CustomField>