force-app/main/default/objects/Opportunity/fields/Brand_Direct__c.field-meta.xml
<CustomField>
    <fullName>Brand_Direct__c</fullName>
    <description>If Account Name equals Agency Name, the Brand Direct checkbox will be checked.</description>
    <formula>IF(AccountId= Agency_Name__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Account Name equals Agency Name, the Brand Direct checkbox will be checked.</inlineHelpText>
    <label>Brand Direct</label>
    <type>Checkbox</type>
</CustomField>