force-app/main/default/objects/Opportunity/fields/Brand_Safety_Provider__c.field-meta.xml
<CustomField>
    <fullName>Brand_Safety_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Safety Provider</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Brand Safety Provider)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>