force-app/main/default/objects/Opportunity/fields/Brand_Study__c.field-meta.xml
<CustomField>
    <fullName>Brand_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Study</label>
    <type>Checkbox</type>
</CustomField>