force-app/main/default/objects/Opportunity/fields/Brand_Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Study_Name__c</fullName>
    <label>Brand Study Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>