force-app/main/default/objects/Opportunity/fields/Budget_Cut_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cut_Amount__c</fullName>
    <description>This field displays the amount in which the budget was cut</description>
    <label>Budget Cut Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Incremental_New__c</field>
        <operation>equals</operation>
        <value>Budget Cut - All Partners (Advertising), Budget Cut - Campaign Cancelled (Advertising), Budget Cut - Covid-19 (Advertising), Budget Cut - Optimizations Between Units (Advertising), Budget Cut - Underperformance (Advertising)</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>