force-app/main/default/objects/Opportunity/fields/Bypass_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows certain users *admin and sales ops&quot; to bypass process builders for uploads</inlineHelpText>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>