force-app/main/default/objects/Opportunity/fields/Campaign_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Budget__c</fullName>
    <description>SOP-3407 - New Fields Request - Campaign Budget and Timing</description>
    <inlineHelpText>This field is populated based on what the lead manually inputted on the form field “Campaign Budget” from a contact form on our website.</inlineHelpText>
    <label>Campaign Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>