force-app/main/default/objects/Opportunity/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign ID</label>
    <length>19634</length>
    <type>LongTextArea</type>
</CustomField>