force-app/main/default/objects/Opportunity/fields/Campaign_Start_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Quarter__c</fullName>
    <formula>TEXT(YEAR(Start_Date2__c)) + &quot;-&quot; +
IF(MONTH(Start_Date2__c) &lt;= 3, &quot;Q1&quot;, 
IF(MONTH(Start_Date2__c) &lt;= 6, &quot;Q2&quot;, 
IF(MONTH(Start_Date2__c) &lt;= 9, &quot;Q3&quot;, 
&quot;Q4&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Start Quarter</label>
    <type>Text</type>
</CustomField>