force-app/main/default/objects/Opportunity/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Assets</fullName>
            </value>
            <value>
                <fullName>In With Creative</fullName>
                <label>In with Creative</label>
            </value>
            <value>
                <fullName>In with AdBuilder</fullName>
            </value>
            <value>
                <fullName>Waiting for Client Creative Approval</fullName>
            </value>
            <value>
                <fullName>Waiting for Video</fullName>
            </value>
            <value>
                <fullName>Waiting for Pixels/Tags</fullName>
            </value>
            <value>
                <fullName>Engineering is Setting Up</fullName>
                <label>Engineering Is Setting Up</label>
            </value>
            <value>
                <fullName>In QA</fullName>
            </value>
            <value>
                <fullName>Ready to Go</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Live, Creative Refresh</fullName>
            </value>
            <value>
                <fullName>In between phases</fullName>
                <label>In Between Phases</label>
            </value>
            <value>
                <fullName>Campaign Paused</fullName>
            </value>
            <value>
                <fullName>Campaign Cancelled</fullName>
            </value>
            <value>
                <fullName>Campaign Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>