force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field shows the category of the opportunity</description>
    <inlineHelpText>Budget_Category_Content_Flight (Blocked Competitors, if applicable)- 
(i.e - $1M_Makeup Brand_Skincare content_11/12-11/19)</inlineHelpText>
    <label>Category Sponsorship Proposed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>