force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__Contract_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Contract_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Opportunity (IO)</label>
    <type>Checkbox</type>
</CustomField>