force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__Distributor__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor (IO)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.celigo_sfnsio__Channel_Tier__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
    <relationshipName>OpportunityDistributor</relationshipName>
    <type>Lookup</type>
</CustomField>