force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__End_User__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User (IO)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End User)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>