force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__From_Contract__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__From_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Contract (IO)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>