force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__NetSuite_Record__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__NetSuite_Record__c</fullName>
    <label>NetSuite Record (IO)</label>
    <type>Url</type>
</CustomField>