force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__NS_Originated_Order__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__NS_Originated_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Originated Order (IO)</label>
    <type>Checkbox</type>
</CustomField>