force-app/main/default/objects/Opportunity/fields/Channel_DSPNA_Container__c.field-meta.xml
<CustomField>
    <fullName>Channel_DSPNA_Container__c</fullName>
    <description>Populates with DSP value when channel is programmatic, but N/A when it is Direct</description>
    <formula>IF(TEXT(Channel__c)=&quot;Programmatic&quot;,TEXT(DSP__c), &quot;N/A&quot;)</formula>
    <label>Channel DSP/NA Container</label>
    <type>Text</type>
</CustomField>