force-app/main/default/objects/Opportunity/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <formula>TEXT(Account.Client_Status__c)</formula>
    <label>Client Status</label>
    <type>Text</type>
</CustomField>