force-app/main/default/objects/Opportunity/fields/Close_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Year__c</fullName>
    <formula>Text(Year( CloseDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Year</label>
    <type>Text</type>
</CustomField>