force-app/main/default/objects/Opportunity/fields/Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Close_Quarter__c</fullName>
    <formula>TEXT(YEAR(CloseDate)) + &quot;-&quot; +
IF(MONTH(CloseDate) &lt;= 3, &quot;Q1&quot;, 
IF(MONTH(CloseDate) &lt;= 6, &quot;Q2&quot;, 
IF(MONTH(CloseDate) &lt;= 9, &quot;Q3&quot;, 
&quot;Q4&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Quarter</label>
    <type>Text</type>
</CustomField>