force-app/main/default/objects/Opportunity/fields/Commercial_Trading_Deal__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Trading_Deal__c</fullName>
    <label>Commercial / Trading Deal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>