force-app/main/default/objects/Opportunity/fields/Concatenated_Product_List__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Product_List__c</fullName>
    <label>Concatenated Product List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>