force-app/main/default/objects/Opportunity/fields/Contact_Roles_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles_Count__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <label>Primary Contact Role Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>