force-app/main/default/objects/Opportunity/fields/Contains_New_Products__c.field-meta.xml
<CustomField>
    <fullName>Contains_New_Products__c</fullName>
    <description>This field displays if there are new products included in the opportunity</description>
    <label>Contains New Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>