force-app/main/default/objects/Opportunity/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <inlineHelpText>If lead was converted from lead; this is the date in which the conversion occurred</inlineHelpText>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>