force-app/main/default/objects/Opportunity/fields/Count_of_Verity_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Verity_Products__c</fullName>
    <inlineHelpText>Count of  ‘Video Solution - OLV’ or ‘Video Solution - CTV’  products</inlineHelpText>
    <label>Count of Verity Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>Video Solution - CTV, Video Solution - OLV</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>