force-app/main/default/objects/Opportunity/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <length>180</length>
    <type>Text</type>
</CustomField>