force-app/main/default/objects/Opportunity/fields/CPM_Amount__c.field-meta.xml
<CustomField>
    <fullName>CPM_Amount__c</fullName>
    <description>The sum of all CPM Line-Item Total Prices</description>
    <label>CPM Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Pricing__c</field>
        <operation>equals</operation>
        <value>CPM</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>