force-app/main/default/objects/Opportunity/fields/CPM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CPM_Quantity__c</fullName>
    <description>The Sum of All CPM Line-Item Quantities</description>
    <label>CPM Quantity</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Pricing__c</field>
        <operation>equals</operation>
        <value>CPM</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>