force-app/main/default/objects/Opportunity/fields/CPM_Type__c.field-meta.xml
<CustomField>
    <fullName>CPM_Type__c</fullName>
    <label>CPM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated CPM</fullName>
            </value>
            <value>
                <fullName>Segment CPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>