force-app/main/default/objects/Opportunity/fields/CQ_Expected_Running_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CQ_Expected_Running_Revenue__c</fullName>
    <formula>Current_Quarter_Amount__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CQ Expected Running Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>