force-app/main/default/objects/Opportunity/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Created Date (2)</label>
    <type>Date</type>
</CustomField>