force-app/main/default/objects/Opportunity/fields/Created_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Created_Quarter__c</fullName>
    <formula>TEXT(YEAR(datevalue(CreatedDate))) + &apos; &apos; +
CASE(
    MONTH(  datevalue(CreatedDate )),

    1,&apos;Q1&apos;, 
    2,&apos;Q1&apos;, 
    3,&apos;Q1&apos;, 
    4,&apos;Q2&apos;, 
    5,&apos;Q2&apos;, 
    6,&apos;Q2&apos;, 
    7,&apos;Q3&apos;, 
    8,&apos;Q3&apos;, 
    9,&apos;Q3&apos;, 
    10,&apos;Q4&apos;, 
    11,&apos;Q4&apos;, 
    12,&apos;Q4&apos;,  

    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Quarter</label>
    <type>Text</type>
</CustomField>