force-app/main/default/objects/Opportunity/fields/CSM_1__c.field-meta.xml
<CustomField>
    <fullName>CSM_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategist/Sr. #1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>