force-app/main/default/objects/Opportunity/fields/CSM_2__c.field-meta.xml
<CustomField>
    <fullName>CSM_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategist/Sr. #2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>