force-app/main/default/objects/Opportunity/fields/Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Rate__c</fullName>
    <label>Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>