force-app/main/default/objects/Opportunity/fields/Currency_of_Actual_spend__c.field-meta.xml
<CustomField>
    <fullName>Currency_of_Actual_spend__c</fullName>
    <label>Currency of Actual spend</label>
    <length>100</length>
    <type>Text</type>
</CustomField>