force-app/main/default/objects/Opportunity/fields/Current_Quarter_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Pledge_Amount__c</fullName>
    <label>Current Quarter Pledge Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>