force-app/main/default/objects/Opportunity/fields/Custom_Creative_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Custom_Creative_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Add a Check Mark when this Opportunity involves any Custom Creative (Custom Creative-Only, Expedite and Custom Creative, etc...).</inlineHelpText>
    <label>Custom Creative Opportunity</label>
    <type>Checkbox</type>
</CustomField>