force-app/main/default/objects/Opportunity/fields/Custom_Request_Unit__c.field-meta.xml
<CustomField>
    <fullName>Custom_Request_Unit__c</fullName>
    <description>This field displays the custom request type</description>
    <label>Custom Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Ad Unit</fullName>
            </value>
            <value>
                <fullName>Real-time Feed Integration</fullName>
            </value>
            <value>
                <fullName>Image Recognition Technology</fullName>
            </value>
            <value>
                <fullName>Custom Targeting (non-image recognition)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>