force-app/main/default/objects/Opportunity/fields/Customer_Billing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Email_Address__c</fullName>
    <description>This field represents the billing email address of the customer</description>
    <inlineHelpText>Only enter an email; no first or last names</inlineHelpText>
    <label>Customer Billing Email Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>