force-app/main/default/objects/Opportunity/fields/Customer_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mailing_Address__c</fullName>
    <description>This field represents the mailing address of the customer</description>
    <label>Customer Mailing Address</label>
    <type>TextArea</type>
</CustomField>