force-app/main/default/objects/Opportunity/fields/CY_Expected_Running_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_Expected_Running_Revenue__c</fullName>
    <formula>CY_Running_Revenue__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Expected Running Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>