force-app/main/default/objects/Opportunity/fields/CY_Running_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_Running_Revenue__c</fullName>
    <formula>Q1_Running_Revenue__c + Q2_Running_Revenue__c + Q3_Running_Revenue__c + Q4_Running_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Running Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>