force-app/main/default/objects/Opportunity/fields/CY_to_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>CY_to_Date_Closed__c</fullName>
    <formula>IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,01,01),
YEAR( TODAY() ) -1,
YEAR( TODAY() )
),01,01)) &gt;= (CloseDate - DATE( (IF( CloseDate &lt; DATE( YEAR( CloseDate ) ,01,01),
YEAR( CloseDate ) -1,
YEAR( CloseDate ) )
),01,01)) ,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY to Date - Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>