force-app/main/default/objects/Opportunity/fields/Dashboard_Campaign_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Campaign_ID_Number__c</fullName>
    <description>This field displays the campaign id number of the opportunity</description>
    <label>Dashboard Campaign ID Number</label>
    <type>TextArea</type>
</CustomField>