force-app/main/default/objects/Opportunity/fields/Dashboard_ID__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the 5 digit number associated with the Ad Manager campaign</inlineHelpText>
    <label>Ad Manager ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>