force-app/main/default/objects/Opportunity/fields/DashboardsGSP__Close_Date_Extensions__c.field-meta.xml
<CustomField>
    <fullName>DashboardsGSP__Close_Date_Extensions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times the Close Date has been extended.</description>
    <inlineHelpText>Number of times the Close Date has been extended.</inlineHelpText>
    <label># Close Date Extensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>