force-app/main/default/objects/Opportunity/fields/DashboardsGSP__Date_Opportunity_was_Closed__c.field-meta.xml
<CustomField>
    <fullName>DashboardsGSP__Date_Opportunity_was_Closed__c</fullName>
    <description>Date the Opportunity was actually closed.</description>
    <inlineHelpText>Date the Stage was changed to Closed Won or Lost</inlineHelpText>
    <label>Date Opportunity was Closed</label>
    <type>Date</type>
</CustomField>