force-app/main/default/objects/Opportunity/fields/DashboardsGSP__Days_Open_Delete__c.field-meta.xml
<CustomField>
    <fullName>DashboardsGSP__Days_Open_Delete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days OpenV1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>