force-app/main/default/objects/Opportunity/fields/Date_Moved_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Approved__c</fullName>
    <label>Date Moved to Approved</label>
    <type>Date</type>
</CustomField>