force-app/main/default/objects/Opportunity/fields/Date_Moved_to_Closed_Won_Lost__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Closed_Won_Lost__c</fullName>
    <label>Date Moved to Closed (Won/Lost)</label>
    <type>Date</type>
</CustomField>