force-app/main/default/objects/Opportunity/fields/Date_Moved_to_Negotiations__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Negotiations__c</fullName>
    <label>Date Moved to Negotiations</label>
    <type>Date</type>
</CustomField>