force-app/main/default/objects/Opportunity/fields/Date_Moved_to_Outcome_Pending__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Outcome_Pending__c</fullName>
    <label>Date Moved to Outcome Pending</label>
    <type>Date</type>
</CustomField>