force-app/main/default/objects/Opportunity/fields/Date_Moved_to_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Proposal__c</fullName>
    <label>Date Moved to Proposal</label>
    <type>Date</type>
</CustomField>