force-app/main/default/objects/Opportunity/fields/Date_of_Impressions_Delivering_hidden__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Impressions_Delivering_hidden__c</fullName>
    <label>Date of Impressions Delivering (hidden)</label>
    <type>Date</type>
</CustomField>