force-app/main/default/objects/Opportunity/fields/Date_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Qualified__c</fullName>
    <description>Date that Opp was moved to a Qualified Stage</description>
    <inlineHelpText>Date that Opp was moved to a Qualified Stage</inlineHelpText>
    <label>Date Qualified</label>
    <type>Date</type>
</CustomField>