force-app/main/default/objects/Opportunity/fields/Days_Btwn_Start_End__c.field-meta.xml
<CustomField>
    <fullName>Days_Btwn_Start_End__c</fullName>
    <formula>End_Date2__c 
-
 Start_Date2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Btwn Start &amp; End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>