force-app/main/default/objects/Opportunity/fields/Days_from_RFP_submission_until_campaign__c.field-meta.xml
<CustomField>
    <fullName>Days_from_RFP_submission_until_campaign__c</fullName>
    <formula>CloseDate  -   RFP_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFP to campaign launch</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>